<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        app:srcCompat="@drawable/fitness"
        android:contentDescription="@string/get"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matter"
        android:fontFamily="@font/font"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:fontFamily="@font/font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/matter2"
        />

    <Button
        android:id="@+id/but1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="right"/>

</LinearLayout>
