<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/finalScreen"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        app:srcCompat="@drawable/yoga"
        android:contentDescription="@string/pre"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matter"
        android:fontFamily="@font/font"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:lineSpacingMultiplier="1" />
    <TextView
        android:fontFamily="@font/font"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matter2"
        android:lineSpacingMultiplier="0.8"/>
    <Button
        android:id="@+id/but4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="24sp"/>
</LinearLayout>
