<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        app:srcCompat="@drawable/yoga1"
        android:contentDescription="@string/next"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matter"
        android:fontFamily="@font/font"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1"/>

    <TextView
        android:fontFamily="@font/font"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matter2"
        android:lineSpacingMultiplier="0.8"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffff">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/but2"
            android:background="#ffff"
            android:text="@string/next"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/but3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="189dp"
            android:layout_marginRight="189dp"
            android:layout_toStartOf="@+id/but2"
            android:layout_toLeftOf="@+id/but2"
            android:background="#ffff"
            android:text="@string/pre"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>


</LinearLayout>

